use bulma.io template

--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/translator.jpg" />
+    <link rel="icon" type="image/png" href="/translator.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>En2Ru Scientific Translator</title>
+    <title>En2Ru: Scientific Translator</title>
   </head>
   <body>
     <div id="root"></div>
